--- a/css/padrao.css
+++ b/css/padrao.css
@@ -54,11 +54,13 @@ tbody td{
 
 .select{
 	width: 100px;
+	border-radius: 5px;
 }
 
 .DH{
 	width: 100px;
 	text-align: center;
+	border-radius: 5px;
 }
 
 .BOTAO{
